Add routes for Artist
