# api/swagger.yaml
@@ -91,6 +91,36 @@ paths:
           description: "Unauthorized"
         500:
           description: "Internal server error"
+  /artist:
+    post:
+      tags:
+      - "Artist"
+      summary: "Create a new artist"
+      operationId: "createArtist"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+        - name: "Authorization"
+          type: "string"
+          in: "header"
+          description: "Unique JSONWebToken for authentication of the admin"
+        - in: "body"
+          name: "body"
+          description: "Body of the request"
+          required: true
+          schema:
+            $ref: "#/definitions/Artist"
+      responses:
+        200:
+          description: "Success"
+        400:
+          description: "Bad request"
+        401:
+          description: "Unauthorized"
+        500:
+          description: "Internal server error"
 definitions:
   User:
     type: "object"
@@ -140,6 +170,29 @@ definitions:
       password:
         type: "string"
         format: "password"
+
+  Artist:
+    type: "object"
+    properties:
+      name:
+        type: "string"
+      isGroup:
+        type: "boolean"
+      formed:
+        type: "string"
+        format: "date-time"
+      avatar:
+        type: "string"
+      background:
+        type: "string"
+      monthlyListeners:
+        type: "integer"
+      about:
+        type: "string"
+      gallery:
+        type: "array"
+        items:
+          type: "string"
 
 externalDocs:
   description: "Official docs and repository available"
